--- a/package.json
+++ b/package.json
@@ -8,8 +8,20 @@
     "start": "next start"
   },
   "dependencies": {
+    "@chakra-ui/icons": "^1.0.8",
+    "@chakra-ui/react": "^1.4.2",
+    "@emotion/react": "^11.1.5",
+    "@emotion/styled": "^11.1.5",
+    "@googlemaps/google-maps-services-js": "^3.1.16",
+    "axios": "^0.21.1",
+    "cheerio": "^1.0.0-rc.5",
+    "firebase": "^8.3.2",
+    "firebase-admin": "^9.6.0",
+    "framer-motion": "^4.1.2",
     "next": "10.1.3",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-wavify": "^1.5.2",
+    "request": "^2.88.2"
   }
 }
